--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
   </head>
 
   <body>
+    <div class="notice"> <%= notice %> </div>
+    <div class="alert"> <%= alert%> </div>
     <%= yield %>
   </body>
 </html>
