--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,6 @@
 <div class="container">
   <h1>Welcome to <%= application_name %><div style="color:red;font-size:23px;"> loged in as: <%= current_user.email %>! </div> </h2>
+  Avatar <%= image_tag current_user.avatar(:thumb) %>
   <%= link_to "Logout", destroy_user_session_path, method: :delete %>
 </div>
 
