--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>TinderClone</title>
+    <title><%= application_name %></title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -9,6 +9,9 @@
   </head>
 
   <body>
+    <% if current_user %>
+      <%= render 'layouts/header/nav-bar' %>
+    <% end %>
     <div class="notice"> <%= notice %> </div>
     <div class="alert"> <%= alert%> </div>
     <%= yield %>
