Add Users controller, List users on index view
List users with images on "users#index",
prep work for like and disklike option,
added routes accordingly
link for users added in nav-bar.

--- a/app/views/layouts/header/_nav-bar.html.erb
+++ b/app/views/layouts/header/_nav-bar.html.erb
@@ -8,6 +8,7 @@
     <div class="navbar-collapse collapse" id="navcol-1" aria-expanded="false">
       <ul class="nav navbar-nav navbar-left">
         <li><%= link_to 'Image library' , images_path %></li>
+        <li><%= link_to 'Users list' , users_path %></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="round-image-50"><%= image_tag(current_user.avatar.url(:thumb)) %></li>
