--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,8 @@
 <div class="container">
   <h1>Welcome to <%= application_name %></h2>
+  <% @users.each do |user| %>
+     <% user.uploads.each do |uploaded| %>
+      <%= image_tag uploaded.image(:medium) %>
+    <% end %>
+  <% end %>
 </div>
